# ode-designer-rs

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  imgui.ini  requirements.txt
.autopilot/: autopilot.db
.cargo/: config.toml
.github/workflows/: build-appimage.yml  deploy-mdbook.yml
appimage/merge/: AppRun  ode-designer.desktop
appimage/scripts/: build-appimage.sh  skip-dependencies.txt
crates/expr_evaluator/: Cargo.toml
crates/expr_evaluator/src/: expr.rs  lexer.rs  lib.rs  parser.rs
crates/ode-solvers-main/src/: dop853.rs  dop_shared.rs  dopri5.rs
crates/odeir/templates/: ode.py.jinja
doc/: book.toml
doc/src/: chapter_1.md  chapter_3.md
examples/: .hiv.json.kate-swp  SIRS.json  anti-inflammatory-response.json  competicao.json  competition.json  competition_extension_node.py  demo-extension.py  demo-with-extension.json  demo.json  enzimatic_reaction.json  enzimatic_reaction.py  extensao_competicao.py  hiv.json  immuneregulation_ploscb.json  immuneregulation_ploscb.py  infeccaoviral.json  inhibition.py  inhibition_extension.py  logistic.json  logistic_data.csv  predator-prey.json  reacaoenzimatica.json  sin_extension.py  sir_ploscb.json  sir_ploscb.py  viral-infection.json
locales/: imgui.ftl
locales/en/: context.ftl  errors.ftl  menu.ftl  nodes.ftl  parameter-estimation.ftl  sidebar.ftl  simulation.ftl
locales/pt/: context.ftl  errors.ftl  menu.ftl  nodes.ftl  parameter-estimation.ftl  sidebar.ftl  simulation.ftl
scripts/: mingw-ldd.py  windows-compile.sh
src/: app.rs  debug.rs  errors.rs  exprtree.rs  id_gen.rs  locale.rs  main.rs  message.rs  nodes.rs  pins.rs  utils.rs
src/core/: adjust_params.rs  app.rs  id_gen.rs  menu.rs  mod.rs  notification.rs  plot.rs  python.rs  side_bar.rs  style.rs  widgets.rs
src/core/menu/: mod.rs
src/core/plot/: mod.rs
src/egui/: mod.rs
src/extensions/: format.rs  loader.rs  mod.rs
src/extensions/templates/: inspect_node_functions.py.jinja
src/imgui/: app.rs  mod.rs  style.rs
src/nodes/: assigner.rs  combinator.rs  composition_utils.rs  constant.rs  custom.rs  errors.rs  expression.rs  mod.rs  population.rs  term.rs
src/nodes/specialization/: combinator.rs  constant.rs  mod.rs  population.rs
src/ode/: csvdata.rs  ga.rs  ga_json.rs  mod.rs  model.rs  odesystem.rs
src/ode/config/: ga_input.json
src/ode/result/: ga_iterations.txt
src/ode/tests/: ga_iterations.txt  logistic.txt  sir.txt  tcell_response_hiv.txt
src/tests/fixtures/: abk.json  ode.csv
