[package]
name = "ode-designer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
imgui = ["dep:imgui-glium-renderer", "dep:imgui-winit-support", "dep:winit", "dep:glium", "dep:imgui"]

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
log = "0.4.17"
strum = { version = "0.26.1", features = ["strum_macros", "derive"] }
enutil = { version = "0.1.0", features = ["derive"] }
glium = "0.32.1"
imnodes = { path = "./crates/imnodes" }
odeir = { path = "./crates/odeir" }
implot = { path = "./crates/implot-rs" }
thiserror = "1.0.58"
sorted-vec = "0.8.2"
paste = "1.0.14"
imgui = { git = "https://github.com/syndelis/imgui-rs", branch = "fix/alpha-blending", features = ["docking", "tables-api"] }
imgui-glium-renderer = { git = "https://github.com/syndelis/imgui-rs", branch = "fix/alpha-blending" }
imgui-winit-support = { git = "https://github.com/syndelis/imgui-rs", branch = "fix/alpha-blending" }

# For development of imgui-rs features
# imgui = { path = "./crates/imgui-rs/imgui", features = ["docking"] }
# imgui-glium-renderer = { path = "./crates/imgui-rs/imgui-glium-renderer" }
# imgui-winit-support = { path = "./crates/imgui-rs/imgui-winit-support" }

serde_json = "1.0.108"
rfd = { version = "0.12.1", default-features = false, features = ["xdg-portal"] }
csv = "1.3.0"
nom = "7.1.3"
minijinja = "1.0.12"
serde = { version = "1.0.196", features = ["derive"] }
crc32fast = "1.4.0"
unic-langid = { version = "0.9.4", features = ["macros"] }
konst = { version = "0.3.8", default-features = false, features = ["iter"] }
list_files_macro = "0.1.0"
fluent-bundle = "0.15.2"
once_cell = "1.19.0"
fluent-templates = { git = "https://github.com/syndelis/fluent-templates", branch = "remove-panic", version = "0.9.2" }

[target.'cfg(target_os = "linux")'.dependencies.winit]
version = "0.27.5"
features = ["wayland", "x11"]

[target.'cfg(not(target_os = "linux"))'.dependencies.winit]
version = "0.27.5"

[dev-dependencies]
assert-json-diff = { git = "https://github.com/briankung/assert-json-diff/", branch = "feature/assert-json-contains" }
rstest = { version = "0.18.2", default-features = false }

[package.metadata.appimage]
assets = ["assets"]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "librt.so*",
    "libm.so*",
    "libstdc++.so*"
]
