[package]
name = "ode-designer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
imgui = [
    "dep:imgui-glium-renderer",
    "dep:imgui-winit-support",
    "dep:winit",
    "dep:glium",
    "dep:imgui",
]

[dependencies]
anyhow = "1.0"
color-eyre = "0.6.2"
derive_more = "0.99.17"
log = "0.4.17"
strum = { version = "0.26.1", features = ["strum_macros", "derive"] }
enutil = { version = "0.1.0", features = ["derive"] }
glium = { version = "0.35", features = ["glutin-winit"] }
glutin-winit = "0.5"
imnodes = { path = "./crates/imnodes" }
odeir = { path = "./crates/odeir" }
implot = { path = "./crates/implot-rs" }
thiserror = "1.0.58"
sorted-vec = "0.8.2"
paste = "1.0.14"
imgui = { version = "0.12", features = ["docking", "tables-api"] }
imgui-glium-renderer = { version = "0.13" }
imgui-winit-support = { version = "0.13" }
raw-window-handle = "0.6"

serde_json = "1.0.108"
rfd = { version = "0.12.1", default-features = false, features = [
    "xdg-portal",
] }
csv = "1.3.0"
nom = "7.1.3"
minijinja = "1.0.12"
serde = { version = "1.0.196", features = ["derive"] }
crc32fast = "1.4.0"
unic-langid = { version = "0.9.4", features = ["macros"] }
konst = { version = "0.3.8", default-features = false, features = ["iter"] }
list_files_macro = "0.1.0"
fluent-bundle = "0.15.2"
once_cell = "1.19.0"
fluent-templates = { git = "https://github.com/syndelis/fluent-templates", branch = "remove-panic", version = "0.9.2" }
parking_lot = "0.12.3"

quicksort = "1.1.0"
rand = "0.8.5"
vecshard = "0.2.1"
ode_solvers = { path = "./crates/ode-solvers-main" }
expr_evaluator = { path = "./crates/expr_evaluator" }
rayon = "1.10.0"
meval = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies.winit]
version = "0.30"
default-features = false
features = ["wayland", "x11"]

[target.'cfg(not(target_os = "linux"))'.dependencies.winit]
version = "0.30"
default-features = false

[dev-dependencies]
assert-json-diff = { git = "https://github.com/briankung/assert-json-diff/", branch = "feature/assert-json-contains" }
rstest = { version = "0.18.2", default-features = false }

[package.metadata.appimage]
assets = ["assets"]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "librt.so*",
    "libm.so*",
    "libstdc++.so*",
]
